Data viz update

--- a/metropolis-dv.css
+++ b/metropolis-dv.css
@@ -85,3 +85,16 @@ a, a > code {
 .pull-right ~ * {
   clear: both;
 }
+
+/* custom.css */
+.left-code {
+  color: #777;
+  width: 38%;
+  height: 92%;
+  float: left;
+}
+.right-plot {
+  width: 60%;
+  float: right;
+  padding-left: 1%;
+}
