--- a/metropolis-dv.css
+++ b/metropolis-dv.css
@@ -22,10 +22,10 @@
   margin-bottom: 2px;
   margin-right: 50px;
   margin-left: 10px;
-  border-style: solid;
+  /* border-style: solid;
   border-width: 0px 0px 0px 2px;
   border-color: blue;
-  border-radius: 3px;
+  border-radius: 3px;*/
   padding-top: 2px;
   padding-bottom: 2px;
   padding-right: 10px;
